<resources>
    <string name="app_name">capstone</string>
    <string name="halo">Welcome, to Click </string>
    <string name="quotes">With each sip, the story \nof coffee beans unfolds \non our taste buds.</string>
    <string name="getToKnowIt">Get To Know About Coffee</string>
    <string name="detailCoffeeDash"> Coffee beans are small, flavorful seeds that come from the coffee plant. When roasted and brewed, they offer a rich and aromatic experience, providing a delightful range of flavors and energizing effects. Enjoyed worldwide, coffee beans have become an essential part of daily routines, bringing people together through shared moments of enjoyment and stimulation.</string>
    <string name="tittleNews">NEWS</string>
    <string name="detailBerita">Detail News</string>
    <string name="detailDetection">Detail Detection</string>
    <string name="jenisBijiKopi">Jenis Biji Kopi</string>
    <string name="kualitasBijiKopi">Kualitas Biji Kopi</string>
    <string name="detailSingkat">Detail Singkat</string>
    <string name="title_activity_bottom_navbar">bottomNavbar</string>
    <string name="title_home">Dashboard</string>
    <string name="title_quiz">Quiz</string>
    <string name="title_detect">Detection</string>
    <string name="title_news">News</string>
    <string name="title_profile">Profile</string>
    <string name="logo">logo</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet \n, consectetur adipiscing elit, sed do</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="input_your_email">input your email</string>
    <string name="input_your_password">input your password</string>
    <string name="input_your_username">input your username</string>
    <string name="your_profile">Your Profile</string>
    <string name="this_avatar_profile">this avatar profile</string>
    <string name="icon_edit">icon edit</string>
    <string name="username">Username</string>
    <string name="sample_email">ahmad9897@gmail.com</string>
    <string name="colon">:</string>
    <string name="update">Update</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_password">Password must be longer than 8 characters</string>
    <string name="email_empty">Email tidak boleh kosong</string>
    <string name="password_empty">Password tidak boleh kosong</string>
    <string name="username_empty">Username Tidak boleh kosong</string>
    <string name="api_bad_req">Bad Request</string>
    <string name="api_created">Success Created</string>
    <string name="this_is_news">this is News</string>
    <string name="avatar_user">avatar user</string>
    <string name="logout">LogOut</string>
    <string name="coffee_kintamani">Coffee Kintamani</string>
    <string name="berita_coffee">Berita Coffee</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pictures">Foto</string>
    <string name="detect">Detect</string>
    <string name="imagenews">ImageNews</string>
    <string name="contoh_news">Contoh News</string>
    <string name="desc">Desc</string>
    <string name="welcome_login">Even the smallest coffee bean can create the most invigorating aroma</string>
    <string name="welcome_regis">Roasted to perfection, coffee beans unleash their aromatic symphony.</string>
    <string name="onproggress">OnProggress</string>
    <string name="log_out">Logout</string>

    <string-array name="data_name">
        <item>Kintamani</item>
        <item>NTT</item>
    </string-array>

    <string-array name="data_photo">
        <item>@drawable/kopi</item>
        <item>@drawable/kopi</item>
    </string-array>

    <string-array name="data_desc">
        <item>kintamani bali</item>
        <item>Ntt</item>
    </string-array>

</resources>