<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillColor="#EABF9F">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/navigation_quiz"
        android:icon="@drawable/ic_quiz"
        android:title="@string/title_quiz"/>

    <item
        android:id="@+id/navigation_detection"
        android:icon="@drawable/ic_camera"
        android:title="@string/title_detect"/>

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/ic_news"
        android:title="@string/title_news"/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person"
        android:title="@string/title_profile"/>

</menu>